--- a/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/catalog/templates/base_generic.html
@@ -25,8 +25,11 @@
             <li><a href="{% url 'index' %}">Home</a></li>
             <li><a href="{% url 'books' %}">All books</a></li>
             <li><a href="{% url 'authors' %}">All authors</a></li>
-
-            {% if user.is_authenticated %}
+            <li>Staff</li>
+            <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
+            {% if perms.catalog.add_author %}
+            <li><a href="{% url 'author-create' %}">Create author</a></li>
+            {% endif %} {% if user.is_authenticated %}
             <li>User: {{ user.get_username }}</li>
             <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
             <li>
