--- a/locallibrary/catalog/templates/catalog/author_detail.html
+++ b/locallibrary/catalog/templates/catalog/author_detail.html
@@ -1,4 +1,14 @@
-{% extends "base_generic.html" %} {% block content %}
+{% extends "base_generic.html" %} {% block sidebar %} {{ block.super }} {% if
+perms.catalog.change_author or perms.catalog.delete_author %}
+<hr />
+<ul class="sidebar-nav">
+  {% if perms.catalog.change_author %}
+  <li><a href="{% url 'author-update' author.id %}">Update author</a></li>
+  {% endif %} {% if not author.book_set.all and perms.catalog.delete_author %}
+  <li><a href="{% url 'author-delete' author.id %}">Delete author</a></li>
+  {% endif %}
+</ul>
+{% endif %} {% endblock %}{% block content %}
 <h1>Title: {{ author.first_name }}</h1>
 
 <p>Born: {{ author.date_of_birth }}</p>
