--- a/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/catalog/templates/base_generic.html
@@ -25,13 +25,19 @@
             <li><a href="{% url 'index' %}">Home</a></li>
             <li><a href="{% url 'books' %}">All books</a></li>
             <li><a href="{% url 'authors' %}">All authors</a></li>
-            <li>Staff</li>
-            <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
-            {% if perms.catalog.add_author %}
-            <li><a href="{% url 'author-create' %}">Create author</a></li>
-            {% endif %} {% if user.is_authenticated %}
-            <li>User: {{ user.get_username }}</li>
-            <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
+            <div>
+              <li>Staff</li>
+              {% if perms.catalog.add_author %}
+              <li><a href="{% url 'author-create' %}">Create author</a></li>
+              {% endif %} {% if perms.catalog.add_author %}
+              <li><a href="{% url 'book-create' %}">Create book</a></li>
+              {% endif %}
+            </div>
+            <div>
+              {% if user.is_authenticated %}
+              <li>User: {{ user.get_username }}</li>
+              <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
+            </div>
             <li>
               <form
                 id="logout-form"
