--- a/locallibrary/catalog/templates/catalog/author_detail.html
+++ b/locallibrary/catalog/templates/catalog/author_detail.html
@@ -1,5 +1,6 @@
-{% extends "base_generic.html" %} {% block sidebar %} {{ block.super }} {% if
-perms.catalog.change_author or perms.catalog.delete_author %}
+{% extends "base_generic.html" %} {% block sidebar %} {{ block.super }}
+<hr />
+{% if perms.catalog.change_author or perms.catalog.delete_author %}
 <hr />
 <ul class="sidebar-nav">
   {% if perms.catalog.change_author %}
